--- a/software.html
+++ b/software.html
@@ -39,8 +39,24 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/AccoladeInc/743999698624593-software-engineer-ii-python-sql-'>Accolade, Inc. Software Engineer II (Python & SQL) | SmartRecruiters</a></h5> 
+<h5><a href='https://ghdltd.referrals.selectminds.com/jobs/consultant-software-engineer-london-2381'>Consultant Software Engineer - London - GHD Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qNc9VfwN&k=Job&j=ooUrbfwE&__jvst=Employee+Referral&__jvsd=sQfHFgwc&__jvsc=Twitter&bid=nysiqMwZ'>Workiva Inc. Careers - Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=owK89fwh&__jvst=Employee+Referral&__jvsd=svdfVgwD&__jvsc=Twitter&bid=ntmiqMwO'>Palo Alto Networks Careers - Intern - Prisma Access Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://4re.referrals.selectminds.com/jobs/software-engineer-iii-27184'>Software Engineer III - RELX Careers</a></h5> 
+<p><span class="badge badge-light">United States</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/AccoladeInc/743999698624593-software-engineer-ii-python-sql-'>Accolade, Inc. Software Engineer II (Python & SQL) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/ZARecruiting/743999698624341-software-engineer-ii-global-fortune-company'>Z&A Recruiting Software Engineer II ? Global Fortune Company | SmartRecruiters</a></h5> 
@@ -79,7 +95,7 @@
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/gigamon/job/o1gkbfww'>Gigamon Careers - Senior Staff Software Engineer - GigaSmart</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/gigamon/job/o1gkbfww'>Gigamon Careers - Senior Staff Software Engineer - GigaSmart</a></h5> 
 <p><span class="badge badge-light">Chennai Chennai, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -129,7 +145,7 @@
 <p><span class="badge badge-light">Berkeley</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/relativity/6412e7c7-ac1b-4fdc-a8f5-9b375cc794ba'>Relativity - Software Engineer Intern - Trace (Fall/Winter 2019)</a></h5> 
+<h5><a href='https://jobs.lever.co/relativity/6412e7c7-ac1b-4fdc-a8f5-9b375cc794ba'>Relativity - Software Engineer Intern - Trace (Fall/Winter 2019)</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -141,7 +157,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/drchrono/a83259b8-5c90-4995-bdb4-4a9e365f8657'>DrChrono - Director of Software Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drchrono/a83259b8-5c90-4995-bdb4-4a9e365f8657'>DrChrono - Director of Software Engineering</a></h5> 
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -267,7 +283,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kalo/20d763ee-f95b-45a1-8975-359d010dd676'>Kalo - Senior Back-End Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kalo/20d763ee-f95b-45a1-8975-359d010dd676'>Kalo - Senior Back-End Software Engineer</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -315,11 +331,11 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qGjaVfwO&k=Job&j=oxvkbfwh&__jvst=Employee+Referral&__jvsd=s2B1Pgwe&__jvsc=Twitter&bid=njxVpMwr'>Spectra Logic Careers - Software Engineer / Developer - (Golang)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qGjaVfwO&k=Job&j=oxvkbfwh&__jvst=Employee+Referral&__jvsd=s2B1Pgwe&__jvsc=Twitter&bid=njxVpMwr'>Spectra Logic Careers - Software Engineer / Developer - (Golang)</a></h5> 
 <p><span class="badge badge-light">Boulder, Colorado  Boulder, Colorado</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698601455-software-engineer'>Renaissance Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698601455-software-engineer'>Renaissance Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -327,7 +343,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698601705-senior-software-engineer'>Renaissance Senior Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698601705-senior-software-engineer'>Renaissance Senior Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -347,7 +363,7 @@
 <p><span class="badge badge-light">Barcelona, Spain  Barcelona, Spain</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://raisin.join.com/jobs/452387-senior-software-engineer-front-end-m-f-d'>Job @ Raisin (Berlin): (Senior) Software Engineer ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://raisin.join.com/jobs/452387-senior-software-engineer-front-end-m-f-d'>Job @ Raisin (Berlin): (Senior) Software Engineer ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -379,11 +395,11 @@
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://lbl.referrals.selectminds.com/jobs/software-engineer-usable-software-systems-and-integrated-data-frameworks-2298'>Software Engineer - Usable Software Systems and Integrated Data FRameworks - LBL Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lbl.referrals.selectminds.com/jobs/software-engineer-usable-software-systems-and-integrated-data-frameworks-2298'>Software Engineer - Usable Software Systems and Integrated Data FRameworks - LBL Careers</a></h5> 
 <p><span class="badge badge-light">United States  Berkeley</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/senior-software-engineer-leisure-lpd-10051'>Senior Software Engineer (Leisure): LPD - Rakuten Careers</a></h5> 
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/senior-software-engineer-leisure-lpd-10051'>Senior Software Engineer (Leisure): LPD - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light">Tokyo Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -403,7 +419,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/loandepot/job/oOFQafwd'>loanDepot Careers - Sr. Full Stack Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/loandepot/job/oOFQafwd'>loanDepot Careers - Sr. Full Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -427,23 +443,7 @@
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://genesys.referrals.selectminds.com/jobs/associate-software-engineer-3924'>Associate Software Engineer - Genesys Careers</a></h5> 
-<p><span class="badge badge-light">Galway Galway</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Flywire1/743999698593568-senior-software-engineer'>Flywire Senior Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698593473-lead-software-engineer-jr1009287-'>Broadridge Lead Software Engineer (JR1009287) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Pluralsight/743999698592709-software-engineer-streaming-data-platform'>Pluralsight Software Engineer - Streaming Data Platform | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Jordan</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
